# teaching

./: LICENSE-code  README.md  gen_pages.py  gen_shinylive.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: .authors.yml  SUMMARY.md  about.md  contributing.md  index.md  license.md
docs/apps/Diffraction/Small-Angle_X-ray_Scattering/: app.md
docs/apps/DiffractionAndTransmission/: app.md  app.py
docs/apps/FastFourierTransforms/: app.md
docs/apps/FastFourierTransforms/1d/: app.py
docs/apps/FastFourierTransforms/2d/: app.py
docs/apps/FourierTransforms/: app.md  app.py
docs/apps/FractionalDerivatives/: app.md  app.py
docs/apps/LagrangianPoints/: app.md  app.py
docs/apps/MinkowskiSpaceTime/: app.md  app.py
docs/apps/MinkowskiSpaceTime/doppler/: app.py
docs/apps/MinkowskiSpaceTime/motion/: app.py
docs/apps/MultipoleExpansion/: app.md  app.py  requirements.txt
docs/apps/NablaShowcase/: app.md  app.py
docs/apps/NablaShowcase/curl/: app.py
docs/apps/NablaShowcase/gradient/: app.py
docs/apps/OrbitIntegrator/: app.md  app.py
docs/apps/PlotlyPenguins/: app.md
docs/apps/PolarizationViewer/: app.md  app.py
docs/apps/RandomWalk/: app.md  app.py
docs/apps/Small-Angle_X-ray_Scattering/: app.md
docs/apps/SphericalHarmonics/: app.md  app.py
docs/apps/TaylorExpansion/: app.md  app.py
docs/apps/TemplateMatplotlib/: app.md
docs/apps/TemplateMatplotlib/animated/: app.py
docs/apps/TemplateMatplotlib/automatic/: requirements.txt
docs/apps/TemplateMatplotlib/dark/: app.py
docs/apps/TemplateMatplotlib/seaborn/: app.py
docs/apps/TemplateMatplotlib/static/: app.py
docs/apps/TemplatePlotly/: app.md  app.py
(+5 files in other folders)
